--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -157,3 +157,7 @@
 
 /* Style when the screen width is more than 1200px */
 @media screen and (min-width: 1200px) {}
+
+
+/* AJUSTER MODAL SUR MOBILE */
+/* ANIMATION MODAL QUAND LA PAGE SE CHARGE */
