--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -92,7 +92,9 @@ header {
 /* Home button position */
 .home-button {
     float: left;
-    transition: transform .6s ease-in-out;
+    transition: transform 1s ease-in-out;
+
+    transform: translateX(-120vh);
 }
 
 .home-button:hover {
