--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -45,16 +45,16 @@
 /* Lines transition */
 .line1 {
     transform-origin: 0% 0%;
-    transition: transform 0.4s ease-in-out;
+    transition: transform 0.2s linear;
 }
 
 .line2 {
-    transition: transform 0.4s ease-in-out;
+    transition: transform 0.2s linear;
 }
 
 .line3 {
     transform-origin: 0% 100%;
-    transition: transform 0.4s ease-in-out;
+    transition: transform 0.2s linear;
 }
 
 /* Lines transition onclick */
@@ -92,7 +92,7 @@ header {
 /* Home button position */
 .home-button {
     float: left;
-    transition: transform .7s ease-in-out;
+    transition: transform .7s linear;
 
     transform: translateX(-120vh);
 }
